packages/astro/e2e/fixtures/errors/src/pages/astro-client-media-error.astro
---
// TODO: Re-enable once Svelte is compatible with Vite v8
// import SvelteDirectiveError from '../components/svelte/SvelteDirectiveError.svelte';
---

<div>
  <!-- <SvelteDirectiveError client:media /> -->
</div>
